<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="divide_symbol">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_symbol">*</string>
    <string name="_0">0</string>
</resources>