<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_txt"
        android:text="@string/_0"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_above="@+id/result_txt"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_txt"
        android:text="@string/_0"
        android:textSize="56sp"
        android:textAlignment="textEnd"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16dp"/>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1"
        android:paddingVertical="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textColor="#FFFFFF"
                android:backgroundTint="#E91E63"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="#a1a1a1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:backgroundTint="#a1a1a1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide_symbol"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/divide_symbol"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_7"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_7"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_8"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_8"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_9"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_9"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/multiply_symbol"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_multiply"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="4"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_4"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="5"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_5"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="6"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_6"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="+"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="1"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="2"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_2"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="3"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_3"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="-"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="ac"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#E91E63"
                android:id="@+id/button_ac"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="0"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_0"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="."
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_dot"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="="
                android:textSize="32sp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_equals"/>

        </LinearLayout>


    </LinearLayout>




</RelativeLayout>